[package]
authors    =["Thor Kampefner <thorck@pm.me>"]
description="""creative coding with nannou"""
edition    ="2021"
license    ="Apache2.0 OR MIT"
name       ="creative-coding"
repository ="https://github.com/thor314/creative-coding"
version    ="0.1.0"

[dependencies]
anyhow   ="1.0"
cute = "0.3.0"
log       ="0.4" 
thiserror="1.0"
env_logger = "0.11"
dotenvy = "0.15" 
clap = {version = "4.4.16", features = ["derive"]}
delegate = "0.12.0" # useful for subcommand-style cli
nannou = "0.19.0"


[dev-dependencies]
rstest    ="0.18"         # testing convenience proc-macros
